--- a/Android/ShoppingSolver/app/src/main/res/values/strings.xml
+++ b/Android/ShoppingSolver/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     
     <string name="app_name">Shopping Solver</string>
-    <string name="textview_login">Login</string>
+    <string name="textview_login">User name</string>
     <string name="action_settings">Settings</string>
     <string name="textview_password">Pass Word</string>
     <string name="button_connexion">Connextion</string>
